fix: update assertions in BookControllerTest to use getFirst() for improved readability